--- a/Vit.Db/Vit.Db.DbMng/Vit.Db.DbMng.csproj
+++ b/Vit.Db/Vit.Db.DbMng/Vit.Db.DbMng.csproj
@@ -3,6 +3,7 @@
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<Version>2.2.2</Version>
+		<pack/>
 	</PropertyGroup>
 
 	<PropertyGroup>
