--- a/Vit.DynamicCompile/Vit.DynamicCompile/Vit.DynamicCompile.csproj
+++ b/Vit.DynamicCompile/Vit.DynamicCompile/Vit.DynamicCompile.csproj
@@ -4,6 +4,7 @@
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<Version>2.2.2</Version>
 		<PreserveCompilationContext>true</PreserveCompilationContext>
+		<pack/>
 	</PropertyGroup>
 
 	<PropertyGroup>
