--- a/Vit.Linq/Vit.Linq/Vit.Linq.csproj
+++ b/Vit.Linq/Vit.Linq/Vit.Linq.csproj
@@ -3,6 +3,7 @@
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<Version>2.2.2</Version>
+		<pack/>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -18,7 +19,5 @@
 	<ItemGroup>
 		<PackageReference Include="Vit.Core" Version="2.1.5" />
 	</ItemGroup>
-
-
 
 </Project>
