--- a/Vit.Orm.Dapper/Vit.Orm.Dapper/Vit.Orm.Dapper.csproj
+++ b/Vit.Orm.Dapper/Vit.Orm.Dapper/Vit.Orm.Dapper.csproj
@@ -3,6 +3,7 @@
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<Version>2.2.2</Version>
+		<pack/>
 	</PropertyGroup>
 
 	<PropertyGroup>
