--- a/Vit.Orm.EntityFramework/Vit.Orm.EntityFramework.Dynamic/Vit.Orm.EntityFramework.Dynamic.csproj
+++ b/Vit.Orm.EntityFramework/Vit.Orm.EntityFramework.Dynamic/Vit.Orm.EntityFramework.Dynamic.csproj
@@ -4,6 +4,7 @@
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<Version>2.2.2</Version>
 		<PreserveCompilationContext>true</PreserveCompilationContext>
+		<pack/>
 	</PropertyGroup>
 
 	<PropertyGroup>
