--- a/Vit.Orm.EntityFramework/Vit.Orm.EntityFramework/Vit.Orm.EntityFramework.csproj
+++ b/Vit.Orm.EntityFramework/Vit.Orm.EntityFramework/Vit.Orm.EntityFramework.csproj
@@ -5,6 +5,7 @@
 		<!--<TargetFramework>netstandard2.1</TargetFramework>-->
 		<TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
 		<Version>2.2.2</Version>
+		<pack/>
 	</PropertyGroup>
 
 	<PropertyGroup>
