--- a/Vit.DynamicCompile/Vit.DynamicCompile/Vit.DynamicCompile.csproj
+++ b/Vit.DynamicCompile/Vit.DynamicCompile/Vit.DynamicCompile.csproj
@@ -1,10 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
+		<pack/>
+	</PropertyGroup>
+
+	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<Version>2.2.2</Version>
 		<PreserveCompilationContext>true</PreserveCompilationContext>
-		<pack/>
 	</PropertyGroup>
 
 	<PropertyGroup>
