--- a/Vit.OnlineUpgrade/Vit.OnlineUpgrade/Vit.OnlineUpgrade.csproj
+++ b/Vit.OnlineUpgrade/Vit.OnlineUpgrade/Vit.OnlineUpgrade.csproj
@@ -1,11 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
+		<pack/>
+	</PropertyGroup>
+
+	<PropertyGroup>
 		<OutputType>Exe</OutputType>
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<Version>2.2.2</Version>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-		<pack/>
 	</PropertyGroup>
 
 	<PropertyGroup>
