--- a/.github/workflows/action-main.yml
+++ b/.github/workflows/action-main.yml
@@ -4,11 +4,14 @@ name: CI
 
 # Controls when the action will run. 
 on:
-  # Triggers the workflow on push tag
+  
   push:
-    tags:
-      - '*'
+    # Triggers the workflow on push events but only for the master branch
+    #branches: [ master ]
 
+    # Triggers the workflow on push tag
+    tags: ['*']
+    
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -25,7 +28,7 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a set of commands using the runners shell
-      - name: Run startup.sh
+      - name: Run startup.bash
         run: |
            set -e
            echo start build
@@ -35,7 +38,7 @@ jobs:
            export NUGET_KEY="${{ secrets.NUGET_KEY }}"
            export GIT_SSH_SECRET="${{ secrets.GIT_SSH_SECRET }}"
            cd ./Publish/DevOps/github
-           bash startup.sh
+           bash startup.bash
            echo build succeed!
 
       - name: Release-Create
@@ -47,7 +50,7 @@ jobs:
         with:
           release_name: ${{ env.release_name }}
           tag_name: ${{ env.release_tag }}
-          draft: ${{ env.Release_draft }}
+          draft: ${{ env.release_draft }}
           prerelease: ${{ env.release_prerelease }}
           body: ${{ env.release_body }}
       - name: Release-Upload
