--- a/.github/workflows/action-main.yml
+++ b/.github/workflows/action-main.yml
@@ -37,14 +37,17 @@ jobs:
            export NUGET_SERVER="${{ secrets.NUGET_SERVER  }}"
            export NUGET_KEY="${{ secrets.NUGET_KEY }}"
            export GIT_SSH_SECRET="${{ secrets.GIT_SSH_SECRET }}"
-           cd ./Publish/DevOps/github
+           cd ./Publish/DevOps/github-bash
            bash startup.bash
            echo build succeed!
-
-      - name: Release-Create
-        id: create_release
+           
+           echo "appName=Vit.Library" >> $GITHUB_ENV
+           
+           
+      - name: release_create
+        id: release_create
         uses: actions/create-release@v1
-        if: hashFiles(env.release_assetPath)
+        #if: hashFiles(env.release_assetPath)
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
@@ -53,14 +56,15 @@ jobs:
           draft: ${{ env.release_draft }}
           prerelease: ${{ env.release_prerelease }}
           body: ${{ env.release_body }}
-      - name: Release-Upload
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        if: hashFiles(env.release_assetPath)
+
+
+      # release_upload_asset
+
+      - uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a   `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          asset_path: ${{ env.release_assetPath }}
-          asset_name: ${{ env.release_assetName }}
-          asset_content_type: ${{ env.release_contentType }}
+          upload_url: ${{ steps.release_create.outputs.upload_url }}
+          asset_path: ${{ env.release_dirPath }}/${{ env.appName }}-nuget-${{ env.release_version }}.zip
+          asset_name: ${{ env.appName }}-nuget-${{ env.release_version }}.zip
+          asset_content_type: application/zip
