--- a/Vit.OnlineUpgrade/Vit.OnlineUpgrade/Vit.OnlineUpgrade.csproj
+++ b/Vit.OnlineUpgrade/Vit.OnlineUpgrade/Vit.OnlineUpgrade.csproj
@@ -7,7 +7,7 @@
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
 		<TargetFramework>netstandard2.0</TargetFramework>
-		<Version>2.2.2</Version>
+		<Version>2.2.4-preview</Version>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	</PropertyGroup>
 
@@ -23,9 +23,9 @@
 
 
 	<ItemGroup>
-		<PackageReference Include="Vit.Core" Version="2.1.5" />
+		<PackageReference Include="Vit.Core" Version="2.1.7" />
 		<PackageReference Include="System.Text.Encoding.CodePages" Version="5.0.0" />
-		<PackageReference Include="Vit.Net.Http.FormFile" Version="2.1.5" />
+		<PackageReference Include="Vit.Net.Http.FormFile" Version="2.1.7" />
 	</ItemGroup>
 
 </Project>
