--- a/Vit.Orm.EntityFramework/Vit.Orm.EntityFramework.Dynamic/Vit.Orm.EntityFramework.Dynamic.csproj
+++ b/Vit.Orm.EntityFramework/Vit.Orm.EntityFramework.Dynamic/Vit.Orm.EntityFramework.Dynamic.csproj
@@ -1,10 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netstandard2.0</TargetFramework>
-		<Version>2.2.2</Version>
-		<PreserveCompilationContext>true</PreserveCompilationContext>
 		<pack/>
+	</PropertyGroup>
+
+	<PropertyGroup>
+		<TargetFramework>netstandard2.0</TargetFramework>
+		<Version>2.2.4-preview</Version>
+		<PreserveCompilationContext>true</PreserveCompilationContext>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -26,7 +29,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Vit.Core" Version="2.1.5" />
+		<PackageReference Include="Vit.Core" Version="2.1.7" />
 	</ItemGroup>
 
 	<ItemGroup>
