--- a/Vit.Orm.EntityFramework/Vit.Orm.EntityFramework/Vit.Orm.EntityFramework.csproj
+++ b/Vit.Orm.EntityFramework/Vit.Orm.EntityFramework/Vit.Orm.EntityFramework.csproj
@@ -1,11 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
+		<pack />
+	</PropertyGroup>
+
+	<PropertyGroup>
 		<!--<TargetFramework>netstandard2.0</TargetFramework>-->
 		<!--<TargetFramework>netstandard2.1</TargetFramework>-->
 		<TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
-		<Version>2.2.2</Version>
-		<pack/>
+		<Version>2.2.4-preview</Version>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -20,7 +23,7 @@
 
 
 	<ItemGroup>
-		<PackageReference Include="Vit.Core" Version="2.1.5" />
+		<PackageReference Include="Vit.Core" Version="2.1.7" />
 	</ItemGroup>
 
 	<ItemGroup>
