--- a/Vit.Orm.EntityFramework/Vit.Orm.EntityFramework.Dynamic/Vit.Orm.EntityFramework.Dynamic.csproj
+++ b/Vit.Orm.EntityFramework/Vit.Orm.EntityFramework.Dynamic/Vit.Orm.EntityFramework.Dynamic.csproj
@@ -6,7 +6,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
-		<Version>2.2.4-preview</Version>
+		<Version>2.2.4-temp</Version>
 		<PreserveCompilationContext>true</PreserveCompilationContext>
 	</PropertyGroup>
 
