--- a/Vit.Orm.EntityFramework/Vit.Orm.EntityFramework/Vit.Orm.EntityFramework.csproj
+++ b/Vit.Orm.EntityFramework/Vit.Orm.EntityFramework/Vit.Orm.EntityFramework.csproj
@@ -45,6 +45,7 @@
 	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
 		<PackageReference Include="Configuration.EntityFramework" Version="1.0.1.123" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.14" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.14" />
 		<PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.17" />
 	</ItemGroup>
 
@@ -57,8 +58,9 @@
 	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
 		<PackageReference Include="Configuration.EntityFramework" Version="1.0.1.123" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.6" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.6" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.6" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.6" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.6" />
 		<PackageReference Include="MySql.EntityFrameworkCore" Version="5.0.3" />
 		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.0" />
 	</ItemGroup>
