--- a/Vit.Orm.EntityFramework/Vit.Orm.EntityFramework/Vit.Orm.EntityFramework.csproj
+++ b/Vit.Orm.EntityFramework/Vit.Orm.EntityFramework/Vit.Orm.EntityFramework.csproj
@@ -8,7 +8,7 @@
 		<!--<TargetFramework>netstandard2.0</TargetFramework>-->
 		<!--<TargetFramework>netstandard2.1</TargetFramework>-->
 		<TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
-		<Version>2.2.4-temp</Version>
+		<Version>2.2.4</Version>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -23,7 +23,7 @@
 
 
 	<ItemGroup>
-		<PackageReference Include="Vit.Core" Version="2.1.7" />
+		<PackageReference Include="Vit.Core" Version="2.1.8" />
 	</ItemGroup>
 
 	<ItemGroup>
