--- a/Vit.Http.ChunkUpload/Demo/Vit.Http.ChunkUpload.Demo/appsettings.json
+++ b/Vit.Http.ChunkUpload/Demo/Vit.Http.ChunkUpload.Demo/appsettings.json
@@ -4,5 +4,12 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*" 
+  "AllowedHosts": "*",
+
+
+
+  /* asp.net core 原始web服务配置 */
+  "server": {
+        "urls": [ "http://*:5001" ]
+  }
 }
