--- a/Vit.Http.ChunkUpload/Demo/Vit.Http.ChunkUpload.Demo/Vit.Http.ChunkUpload.Demo.csproj
+++ b/Vit.Http.ChunkUpload/Demo/Vit.Http.ChunkUpload.Demo/Vit.Http.ChunkUpload.Demo.csproj
@@ -5,11 +5,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="startApp.bat" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="startApp.bat">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" /> 
+    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Vit.WebHost" Version="2.1.11" /> 
   </ItemGroup>
 
   <ItemGroup>
