--- a/Vit.Orm.Dapper/Vit.Orm.Dapper/Vit.Orm.Dapper.csproj
+++ b/Vit.Orm.Dapper/Vit.Orm.Dapper/Vit.Orm.Dapper.csproj
@@ -6,7 +6,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
-		<Version>2.2.8-temp</Version>
+		<Version>2.2.8</Version>
 	</PropertyGroup>
 
 	<PropertyGroup>
