--- a/Vit.Orm.EntityFramework/Vit.Orm.EntityFramework/Vit.Orm.EntityFramework.csproj
+++ b/Vit.Orm.EntityFramework/Vit.Orm.EntityFramework/Vit.Orm.EntityFramework.csproj
@@ -8,7 +8,7 @@
 		<!--<TargetFramework>netstandard2.0</TargetFramework>-->
 		<!--<TargetFramework>netstandard2.1</TargetFramework>-->
 		<TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
-		<Version>2.2.8-temp</Version>
+		<Version>2.2.8</Version>
 	</PropertyGroup>
 
 	<PropertyGroup>
