--- a/Vit.Db/Test/Vit.Db.Redis.MsTest/Vit.Db.Redis.MsTest.csproj
+++ b/Vit.Db/Test/Vit.Db.Redis.MsTest/Vit.Db.Redis.MsTest.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Vit.Core" Version="2.1.15" />
+    <PackageReference Include="Vit.Core" Version="2.1.16-preview2" />
   </ItemGroup>
 
   <ItemGroup>
