--- a/Vit.Db/Vit.Db.DbMng/Vit.Db.DbMng.csproj
+++ b/Vit.Db/Vit.Db.DbMng/Vit.Db.DbMng.csproj
@@ -6,7 +6,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
-		<Version>2.2.10-preview</Version>
+		<Version>2.2.10-preview3</Version>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -20,7 +20,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Vit.Core" Version="2.1.15" />
+		<PackageReference Include="Vit.Core" Version="2.1.16-preview2" />
 		<PackageReference Include="sharpcompress" Version="0.30.1" />
 	</ItemGroup>
 
