--- a/.github/workflows/action-main.yml
+++ b/.github/workflows/action-main.yml
@@ -32,6 +32,7 @@ jobs:
         run: |
            set -e
            echo start build
+           export APPNAME="Vit.Library"
            export NUGET_SERVER="${{ secrets.NUGET_SERVER  }}"
            export NUGET_KEY="${{ secrets.NUGET_KEY }}"
            export GIT_SSH_SECRET="${{ secrets.GIT_SSH_SECRET }}"
