[tag] Vit.Library 2.2.10

--- a/Vit.Db/Test/Vit.Db.Redis.MsTest/Vit.Db.Redis.MsTest.csproj
+++ b/Vit.Db/Test/Vit.Db.Redis.MsTest/Vit.Db.Redis.MsTest.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Vit.Core" Version="2.1.16-preview8.1" />
+    <PackageReference Include="Vit.Core" Version="2.1.16" />
   </ItemGroup>
 
   <ItemGroup>
