--- a/Vit.Db/Vit.Db/Vit.Db.csproj
+++ b/Vit.Db/Vit.Db/Vit.Db.csproj
@@ -6,7 +6,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
-		<Version>2.2.10-preview7</Version>
+		<Version>2.2.10</Version>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -34,7 +34,7 @@
 		<PackageReference Include="Microsoft.Data.Sqlite" Version="5.0.5" />
 		<!--<PackageReference Include="System.Data.SQLite" Version="1.0.113.7" />-->
 
-		<PackageReference Include="Vit.Core" Version="2.1.16-preview8.1" />
+		<PackageReference Include="Vit.Core" Version="2.1.16" />
 		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.1.0" />
 		<PackageReference Include="EPPlus.Core" Version="1.5.4" />
 		<PackageReference Include="StackExchange.Redis" Version="2.2.88" />
