--- a/Vit.Mail/Vit.Mail/Vit.Mail.csproj
+++ b/Vit.Mail/Vit.Mail/Vit.Mail.csproj
@@ -6,7 +6,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
-		<Version>2.2.10</Version>
+		<Version>2.2.11-temp</Version>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -21,7 +21,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="MailKit" Version="3.1.1" />
-		<PackageReference Include="Vit.Core" Version="2.1.16" />
+		<PackageReference Include="Vit.Core" Version="2.1.17-temp" />
 	</ItemGroup>
 
 </Project>
