--- a/Vit.Orm.EntityFramework/Vit.Orm.EntityFramework.Dynamic/Vit.Orm.EntityFramework.Dynamic.csproj
+++ b/Vit.Orm.EntityFramework/Vit.Orm.EntityFramework.Dynamic/Vit.Orm.EntityFramework.Dynamic.csproj
@@ -6,7 +6,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
-		<Version>2.2.11-temp</Version>
+		<Version>2.2.11</Version>
 		<PreserveCompilationContext>true</PreserveCompilationContext>
 	</PropertyGroup>
 
@@ -29,7 +29,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Vit.Core" Version="2.1.17-temp" />
+		<PackageReference Include="Vit.Core" Version="2.1.17" />
 	</ItemGroup>
 
 	<ItemGroup>
