--- a/Vit.Db/Vit.Db.DbMng/Vit.Db.DbMng.csproj
+++ b/Vit.Db/Vit.Db.DbMng/Vit.Db.DbMng.csproj
@@ -6,7 +6,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
-		<Version>2.2.12</Version>
+		<Version>2.2.13-temp</Version>
 	</PropertyGroup>
 
 	<PropertyGroup>
