--- a/Vit.Db/Vit.Db.DbMng/Vit.Db.DbMng.csproj
+++ b/Vit.Db/Vit.Db.DbMng/Vit.Db.DbMng.csproj
@@ -20,7 +20,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Vit.Core" Version="2.1.18" />
+		<PackageReference Include="Vit.Core" Version="2.1.19-preview3" />
 		<PackageReference Include="sharpcompress" Version="0.30.1" />
 	</ItemGroup>
 
