--- a/Vit.Http.ChunkUpload/Demo/Vit.Http.ChunkUpload.Demo/Vit.Http.ChunkUpload.Demo.csproj
+++ b/Vit.Http.ChunkUpload/Demo/Vit.Http.ChunkUpload.Demo/Vit.Http.ChunkUpload.Demo.csproj
@@ -21,7 +21,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Vit.WebHost" Version="2.1.18" /> 
+    <PackageReference Include="Vit.WebHost" Version="2.1.19-preview3" /> 
   </ItemGroup>
 
   <ItemGroup>
