--- a/Vit.Linq/Vit.Linq/Vit.Linq.csproj
+++ b/Vit.Linq/Vit.Linq/Vit.Linq.csproj
@@ -20,7 +20,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Vit.Core" Version="2.1.18" />
+		<PackageReference Include="Vit.Core" Version="2.1.19-preview3" />
 	</ItemGroup>
 
 </Project>
