--- a/Vit.Orm.EntityFramework/Vit.Orm.EntityFramework/Vit.Orm.EntityFramework.csproj
+++ b/Vit.Orm.EntityFramework/Vit.Orm.EntityFramework/Vit.Orm.EntityFramework.csproj
@@ -23,7 +23,7 @@
 
 
     <ItemGroup>
-        <PackageReference Include="Vit.Core" Version="2.1.18" />
+        <PackageReference Include="Vit.Core" Version="2.1.19-preview3" />
     </ItemGroup>
 
     <ItemGroup>
