--- a/Vit.Db/Vit.Db.BulkImport/Vit.Db.BulkImport.csproj
+++ b/Vit.Db/Vit.Db.BulkImport/Vit.Db.BulkImport.csproj
@@ -1,30 +1,30 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<pack>nuget</pack>
-	</PropertyGroup>
+    <PropertyGroup>
+        <pack>nuget</pack>
+    </PropertyGroup>
 
-	<PropertyGroup>
-		<TargetFramework>netstandard2.0</TargetFramework>
-		<Version>2.2.13-temp</Version>
-	</PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>netstandard2.0</TargetFramework>
+        <Version>2.2.13-temp</Version>
+    </PropertyGroup>
 
-	<PropertyGroup>
-		<Authors>Lith</Authors>
-		<Description>Mysql、SqlServer、Sqlite 批量入库工具</Description>
-		<PackageProjectUrl>https://github.com/serset/Vit.Library</PackageProjectUrl>
-	</PropertyGroup>
+    <PropertyGroup>
+        <Authors>Lith</Authors>
+        <Description>Mysql/SqlServer/Sqlite bulk import or export tool</Description>
+        <PackageProjectUrl>https://github.com/serset/Vit.Library</PackageProjectUrl>
+    </PropertyGroup>
 
-	<PropertyGroup>
-		<DocumentationFile>bin\Debug\netstandard2.0\Vit.Db.BulkImport.xml</DocumentationFile>
-	</PropertyGroup>
+    <PropertyGroup>
+        <DocumentationFile>bin\Debug\netstandard2.0\Vit.Db.BulkImport.xml</DocumentationFile>
+    </PropertyGroup>
 
-	<ItemGroup>
-		<PackageReference Include="Microsoft.SqlServer.Types" Version="13.0.4001" />
-	</ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.SqlServer.Types" Version="13.0.4001" />
+    </ItemGroup>
 
-	<ItemGroup>
-		<ProjectReference Include="..\Vit.Db\Vit.Db.csproj" />
-	</ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\Vit.Db\Vit.Db.csproj" />
+    </ItemGroup>
 
 </Project>
