--- a/Vit.Excel/Vit.Excel/Vit.Excel.csproj
+++ b/Vit.Excel/Vit.Excel/Vit.Excel.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <pack>nuget</pack>
@@ -6,7 +6,7 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
-        <Version>2.2.13-temp</Version>
+        <Version>2.2.13</Version>
         <LangVersion>preview</LangVersion>
     </PropertyGroup>
 
@@ -25,7 +25,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Vit.Core" Version="2.1.19-preview4" />
+        <PackageReference Include="Vit.Core" Version="2.1.19" />
         <PackageReference Include="EPPlus.Core" Version="1.5.4" />
         <PackageReference Include="MiniExcel" Version="1.31.2" />
     </ItemGroup>
