--- a/Vit.Linq/Vit.Linq/Vit.Linq.csproj
+++ b/Vit.Linq/Vit.Linq/Vit.Linq.csproj
@@ -6,7 +6,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
-		<Version>2.2.13-temp</Version>
+		<Version>2.2.13</Version>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -20,7 +20,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Vit.Core" Version="2.1.19-preview4" />
+		<PackageReference Include="Vit.Core" Version="2.1.19" />
 	</ItemGroup>
 
 </Project>
