--- a/.github/workflows/action-ki_multibranch.yml
+++ b/.github/workflows/action-ki_multibranch.yml
@@ -36,7 +36,10 @@ jobs:
         run: |
            set -e
            echo start build
-           export APPNAME="Vit.Library"
+
+           # export DOCKER_ImagePrefix="serset/"
+           # export DOCKER_USERNAME="${{ secrets.DOCKER_USERNAME  }}"
+           # export DOCKER_PASSWORD="${{ secrets.DOCKER_PASSWORD }}"
            export NUGET_SERVER="${{ secrets.NUGET_SERVER  }}"
            export NUGET_KEY="${{ secrets.NUGET_KEY }}"
            export WebDav_BaseUrl="${{ secrets.WebDav_BaseUrl }}"
@@ -45,7 +48,7 @@ jobs:
            bash startup.bash
            echo build succeed!
            
-           echo "appName=Vit.Library" >> $GITHUB_ENV
+           # echo "appName=${APPNAME}" >> $GITHUB_ENV
            
            
       - name: release_create
