upgrade Vit library

--- a/Vit.Orm.EntityFramework/Vit.Orm.EntityFramework/Vit.Orm.EntityFramework.csproj
+++ b/Vit.Orm.EntityFramework/Vit.Orm.EntityFramework/Vit.Orm.EntityFramework.csproj
@@ -23,8 +23,8 @@
 
 
     <ItemGroup>
-        <PackageReference Include="Vit.Core" Version="2.1.19" />
-        <PackageReference Include="Vit.Linq" Version="2.2.18-temp-ki32" />
+        <PackageReference Include="Vit.Core" Version="2.1.20" />
+        <PackageReference Include="Vit.Linq" Version="2.2.18" />
     </ItemGroup>
 
     <ItemGroup>
