--- a/Vit.Excel/Vit.Excel/Vit.Excel.csproj
+++ b/Vit.Excel/Vit.Excel/Vit.Excel.csproj
@@ -13,7 +13,7 @@
     <PropertyGroup>
         <Authors>Lith</Authors>
         <Description>tool for excel</Description>
-        <PackageProjectUrl>https://github.com/serset/Vit.Library</PackageProjectUrl>
+        <PackageProjectUrl>https://github.com/VitLibs/Vit.Library</PackageProjectUrl>
     </PropertyGroup>
 
     <PropertyGroup>
@@ -23,7 +23,7 @@
 
     <ItemGroup>
         <PackageReference Include="Vit.Core" Version="2.2.0" />
-        <PackageReference Include="MiniExcel" Version="1.32.1" />
+        <PackageReference Include="MiniExcel" Version="1.34.0" />
     </ItemGroup>
 
 </Project>
