--- a/Vit.OnlineUpgrade/Vit.OnlineUpgrade.Netcore/Vit.OnlineUpgrade.Netcore.csproj
+++ b/Vit.OnlineUpgrade/Vit.OnlineUpgrade.Netcore/Vit.OnlineUpgrade.Netcore.csproj
@@ -12,7 +12,7 @@
     <PropertyGroup>
         <Authors>Lith</Authors>
         <Description>AspNetCore online upgrade</Description>
-        <PackageProjectUrl>https://github.com/serset/Vit.Library</PackageProjectUrl>
+        <PackageProjectUrl>https://github.com/VitLibs/Vit.Library</PackageProjectUrl>
     </PropertyGroup>
 
     <PropertyGroup>
